--- a/platform_win/.gitignore
+++ b/platform_win/.gitignore
@@ -6,6 +6,7 @@ contrib/
 man/
 manifest/
 chibios/
+stlink-20130324-win/
 
 coreutils-5.3.0-bin.zip
 make-3.81-bin.zip
@@ -13,6 +14,10 @@ make-3.81-dep.zip
 ChibiOS_2.6.6.zip
 gcc-arm-none-eabi-4_8-2014q3-20140805-win32.zip
 openocd-0.8.0.zip
+stlink-20130324-win.zip
+
+st-flash.exe
+libusb-1.0.dll
 
 GNU Tools ARM Embedded/
 gcc-arm-none-eabi-4_8-2014q2/
