--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -282,14 +282,14 @@ UINCDIR =
 ULIBDIR = .
 
 # List all user libraries here
-ULIBS = -lm \
-	samples/808bd.o \
-	samples/808hatclose.o \
-	samples/808hatopen.o \
-	samples/808hitom.o \
-	samples/808midtom.o \
-	samples/808lotom.o \
-	samples/808snare.o 
+ULIBS = -lm 
+#	samples/808bd.o \
+#	samples/808hatclose.o \
+#	samples/808hatopen.o \
+#	samples/808hitom.o \
+#	samples/808midtom.o \
+#	samples/808lotom.o \
+#	samples/808snare.o 
 
 #
 # End of user defines
