--- a/platform_win/.gitignore
+++ b/platform_win/.gitignore
@@ -7,23 +7,15 @@ contrib/
 man/
 manifest/
 chibios/
-stlink-20130324-win/
 apache-ant-1.9.4/
-ChibiOS_2.6.6/
+ChibiOS_2.6.*/
 
 coreutils-5.3.0-bin.zip
 make-3.81-bin.zip
 make-3.81-dep.zip
-ChibiOS_2.6.6.zip
-gcc-arm-none-eabi-4_8-2014q3-20140805-win32.zip
+ChibiOS_2.6.*.zip
+gcc-arm-none-eabi-*-win32.zip
 openocd-0.8.0.zip
-stlink-20130324-win.zip
-
-st-flash.exe
-
-GNU Tools ARM Embedded/
-gcc-arm-none-eabi-4_8-2014q2/
-openocd/
-yagarto-tools/
+arm-none-eabi
 
 .bash_history
