--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -96,7 +96,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Daxoloti_release=.  -Daxoloti_home=.  -Daxoloti_firmware=./firmware  -Daxoloti_runtime=.
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
