Build.xml fallback when git is absent

--- a/build.xml
+++ b/build.xml
@@ -240,15 +240,15 @@
 
   </target>
 
-	<target name="create.build.version">
-		<exec executable="git" outputproperty="build.version">
-			<arg line = "describe --long --tags --dirty --always" />
-		</exec>
-		<echo output="src/main/java/axoloti/Version.java" >package axoloti;</echo>
-		<echo output="src/main/java/axoloti/Version.java" append="true">public class Version {</echo>
-		<echo output="src/main/java/axoloti/Version.java" append="true">public final static String AXOLOTI_VERSION ="${build.version}";</echo>
-		<echo output="src/main/java/axoloti/Version.java" append="true">};</echo>
-	</target>
-
+    <target name="create.build.version">
+        <exec executable="git" outputproperty="build.version" failifexecutionfails="false">
+            <arg line = "describe --long --tags --dirty --always" />
+        </exec>
+        <property name="build.version" value="(git missing)"/>
+        <echo output="src/main/java/axoloti/Version.java" >package axoloti;</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">public class Version {</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">public final static String AXOLOTI_VERSION ="${build.version}";</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">};</echo>
+    </target>
       
 </project>
