--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ os:
   - linux
   - osx
 language: java
-jdk: oraclejdk8
 before_install:
-- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then sudo apt-get update -qq && sudo ./platform_linux/build.sh; fi"
+- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then jdk_switcher use oraclejdk8 && sudo apt-get update -qq && sudo ./platform_linux/build.sh; fi"
 - "if [ ${TRAVIS_OS_NAME:-'linux'} = 'osx' ]; then ./platform_osx/build.sh; fi"
 - sudo ./platform_linux/build.sh
 script:
