--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ os:
   - osx
 language: java
 before_install:
-- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then jdk_switcher use oraclejdk8 && sudo apt-get update -qq && sudo ./platform_linux/build.sh; fi"
-- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'osx' ]; then ./platform_osx/build.sh; fi"
+- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then jdk_switcher use oraclejdk8 && sudo apt-get update -qq && ./platform_linux/build.sh; fi"
+- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'osx' ]; then brew install ant && ./platform_osx/build.sh; fi"
 - sudo ./platform_linux/build.sh
 script:
 - ant
