--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,9 @@
   <!-- run the ant timestamp task -->
   <tstamp/>
 
+  <target name="-post-init">
+	<antcall target="create.build.version"/>
+  </target>  
   <!-- Overrides -do-jar-->
   <target name="-do-jar">
 
@@ -237,5 +240,15 @@
 
   </target>
 
+    <target name="create.build.version">
+        <exec executable="git" outputproperty="build.version" failifexecutionfails="false">
+            <arg line = "describe --long --tags --dirty --always" />
+        </exec>
+        <property name="build.version" value="(git missing)"/>
+        <echo output="src/main/java/axoloti/Version.java" >package axoloti;</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">public class Version {</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">public final static String AXOLOTI_VERSION ="${build.version}";</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">};</echo>
+    </target>
       
 </project>
