--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -71,7 +71,7 @@ include $(CHIBIOS)/os/hal/platforms/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F4xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
-include $(CHIBIOS)/test/test.mk
+#include $(CHIBIOS)/test/test.mk
 	
 # not using fatfs.mk, since ccsbcs.c should not be included in nonLFN fatfs config
 # include $(CHIBIOS)/os/various/fatfs_bindings/fatfs.mk
