--- a/firmware/flasher/Makefile
+++ b/firmware/flasher/Makefile
@@ -72,7 +72,7 @@ include $(CHIBIOS)/os/hal/platforms/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F4xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
-include $(CHIBIOS)/test/test.mk
+#include $(CHIBIOS)/test/test.mk
 	
 # Define linker script file here
 LDSCRIPT= STM32F407xG.ld
